[package]
name = "gametime_riwayat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
mockall = "0.12.1"
rand = "0.8.5"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid", "time"] }
dotenv = "0.15.0"

[dev-dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
