[package]
name = "gametime_riwayat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid", "time", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0.117"

[dev-dependencies]
reqwest = { version = "0.12.3", features = ["json"] }

[profile.release]
debug = true
